force-app/main/default/objects/Customer_Risk__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Risks</relationshipLabel>
    <relationshipName>Customer_Risks</relationshipName>
    <type>Lookup</type>
</CustomField>