force-app/main/default/objects/Customer_Risk__c/fields/Last_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Last_Assessment__c</fullName>
    <label>Last Assessment</label>
    <type>DateTime</type>
</CustomField>