force-app/main/default/objects/Customer_Risk__c/fields/Risk_Reason__c.field-meta.xml
<CustomField>
    <fullName>Risk_Reason__c</fullName>
    <label>Risk Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>